--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "ovo-6",
-    "repositoryName": "my blog",
+    "repositoryName": "ovo-6.github.io",
     "branch": "master"
   },
   "theme": {
