Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,8 @@
   },
   "site": {
     "title": "ovo6 blog",
-    "description": "my own blog"
+    "description": "my own blog",
+    "disqus": "ovo6"
   },
   "socialnetwork": {},
   "theme": {
